[tool.poetry]
name = "macos-tags"
version = "1.4.2"
description = "Use tags to organize files on Mac from Python"
authors = ["Dima Koskin <dmksknn@gmail.com>"]
license = "MIT"
readme = 'README.md'

homepage = "https://github.com/dmkskn/macos-tags"
repository = "https://github.com/dmkskn/macos-tags"

keywords = ["macos", "tags"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.6"
xattr = "^0.9.7"
mdfind = "^2019.4.13"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
mypy = "^0.761.0"
isort = "^4.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.3"
pytest-cov = "^2.8"
pre-commit = "^1.21"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

